--- a/ApiCRUDWeb/Dockerfile
+++ b/ApiCRUDWeb/Dockerfile
@@ -1,29 +1,11 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-COPY ["ApiCRUDWeb.csproj", "."]
-COPY ["../ApiCRUDWeb.Aplication/ApiCRUDWeb.Aplication.csproj", "."]
-COPY ["../ApiCRUDWeb.Domain/ApiCRUDWeb.Domain.csproj", "."]
-COPY ["../ApiCRUDWeb.Infra.Data/ApiCRUDWeb.Infra.Data.csproj", "."]
-COPY ["../ApiCRUDWeb.Infra.Ioc/ApiCRUDWeb.Infra.Ioc.csproj", "."]
-RUN dotnet restore "./ApiCRUDWeb.csproj"
-COPY . .
-WORKDIR "/src/."
-RUN dotnet build "./ApiCRUDWeb.csproj" -c $BUILD_CONFIGURATION -o /app/build
+COPY . ./
+RUN dotnet publish "ApiCRUDWeb/" -c Release -o out
 
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./ApiCRUDWeb.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build-env /app/ApiCRUDWeb/out .
+
 ENTRYPOINT ["dotnet", "ApiCRUDWeb.dll"]
