--- a/ApiCRUDWeb/Dockerfile
+++ b/ApiCRUDWeb/Dockerfile
@@ -1,10 +1,10 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /app
 
 COPY . ./
-RUN dotnet publish ApiCRUDWeb/ApiCRUDWeb.csproj -c Release -o out
+RUN dotnet publish ApiCRUDWeb -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build-env /app/ApiCRUDWeb/out .
 
