--- a/ApiCRUDWeb/Dockerfile
+++ b/ApiCRUDWeb/Dockerfile
@@ -2,7 +2,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /app
 
 COPY . ./
-RUN dotnet publish ~/ApiCRUDWeb/ApiCRUDWeb.csproj -c Release -o out
+RUN dotnet publish ./ApiCRUDWeb/ApiCRUDWeb.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
